@@ -1,9 +1,9 @@
-from inspect import isbuiltin
+import sys
 from functools import wraps
 from operator import itemgetter
 from collections import Mapping, Set
 
-from .cross import ifilter, ifilterfalse, basestring
+from .cross import imap, ifilter, ifilterfalse, basestring
 from .simple_funcs import identity
 from .strings import re_tester, re_finder, _re_type
 
@@ -34,9 +34,10 @@ def make_pred(pred, builtin=False):
 
 
 def _wrap_higher_order(func, test):
-    # NOTE: builtin housekeeping is optimization:
-    #       map(None, ...) is much faster than map(identity, ...)
-    builtin = isbuiltin(func) or func in set([ifilter, ifilterfalse])
+    # NOTE: builtin housekeeping:
+    #       map(None, ...) is much faster than map(identity, ...),
+    #       also map(None, ...) works as zip() for multiple seqs
+    builtin = sys.version_info[0] == 2 and func in set([map, filter, imap, ifilter, ifilterfalse])
     return wraps(func)(lambda f, *seqs: func(make_func(f, builtin=builtin, test=test), *seqs))
 
 def wrap_mapper(func):
